# alt_alpha_ranker

./: .gitignore  CONTRIBUTING.md  KEYBOARD_INDEXING.md  Makefile  README.md  layouts.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: new-layout.yml
.github/workflows/: deploy_website.yml  scrape_reddit.yml  test.yml  update_data.yml
config/: cyanophage.yml  layouts.yml  typing_texts.yml
config/layouts/: Hieamtsrn.yml  adnw.yml  anymakend.yml  aptV3.yml  aptmak.yml  arensito.yml  beakl19bis.yml  beakl43.yml  birdie.yml  bone.yml  boo.yml  bunya.yml  but.yml  calemog.yml  canary-ortho.yml  canary.yml  capewell-0.9.3.yml  carbyne.yml  caster4.yml  cloud.yml  cloudback.yml  cloudx.yml  cloudy.yml  colemak-dh.yml  colemak-qi-x.yml  colemak.yml  compound.yml  consoc.yml  ctgap.yml  dhorf.yml  diamond-black-n9.yml  diamond-black.yml  diamond-crimson-n9.yml  diamond-cyan-r9.yml  diamond-magenta-r9.yml  (+112 more)
scripts/: convert_typing_texts.py  download_languages.py  eda_layouts.py  generate_racket_url.mjs  scrape_reddit.py  scrape_stats.py  sort_layouts.py  test_scrape_stats.py  visualize_minmax_flaw.py
site/: CNAME  cyanophage.js  cyanophage.test.js  data.json  index.html  keyboard-accordion.css  keyboard-accordion.js  keyboard.css  keyboard.js  keyboard_visualization.js  layout-scores.js  layout-scores.standalone-test.js  layout-scores.standalone-test.mjs  new-layout.js  new_layout.html  script.js  styles.css  test-keyboard-indexing.html  test-utils.js  theme.js  try-layout.html  try-layout.js
(+1 files in other folders)
