[project]
name = "alt-alpha-ranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "playwright>=1.55.0",
    "pydantic-ai>=1.24.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.1",
    "pytest>=9.0.1",
    "seaborn>=0.13.2",
]
